NAZGUL THE SAVIOR. overflow: hidden fixed overlay going from underneath the slide

--- a/css/styles.css
+++ b/css/styles.css
@@ -594,6 +594,7 @@ h1 {
 }
 .box-slide {
   position: relative;
+  overflow:hidden;
 }
 .box-overlay {
   position: absolute;
